# csp-ocaml

./: dune-project  problem.md  readme.md
lib/: dune  garden.ml  garden.mli
test/: dune
test-data/: flower.txt  input.txt
